Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
N/A
-
None
Description
DATA DIRECTORY and INDEX DIRECTORY work for main InnoDB tablespaces and MyISAM data/index files, but not for the vector index ones.
I don't know whether it is meant to work, but given that vector index files can be very large, I think storing them in a separate location can be a realistic use case.
--source include/have_innodb.inc
|
|
|
--let $datadir= `select @@datadir`
|
eval create table ti (a vector(1) not null, vector(a)) engine=InnoDB data directory '$MYSQL_TMP_DIR'; |
eval create table tm (a vector(1) not null, vector(a)) engine=MyISAM data directory '$MYSQL_TMP_DIR' index directory '$MYSQL_TMP_DIR'; |
|
|
--echo ######### MYSQL_TMP_DIR:
|
--list_files $MYSQL_TMP_DIR/
|
--echo ######### MYSQL_TMP_DIR/test:
|
--list_files $MYSQL_TMP_DIR/test/
|
--echo ######### datadir/test:
|
--list_files $datadir/test/
|
|
|
drop table ti, tm; |
|
bb-11.6-MDEV-32887-vector 764592a4da2a1b490471732fbefe2ce745ce1f32 |
######### MYSQL_TMP_DIR:
|
check-mysqld_1.log
|
check-mysqld_1.result
|
mysqld.1
|
mysqld.1.sock
|
test
|
tm.MYD
|
tm.MYI
|
######### MYSQL_TMP_DIR/test:
|
ti.ibd
|
######### datadir/test:
|
db.opt
|
ti#i#00.ibd
|
ti.frm
|
ti.isl
|
tm#i#00.MYD
|
tm#i#00.MYI
|
tm.MYD
|
tm.MYI
|
tm.frm
|
Attachments
Issue Links
- is blocked by
-
MDEV-36050 DATA/INDEX DIRECTORY handling is inconsistent
-
- Closed
-
- is caused by
-
MDEV-34939 vector search in 11.7
-
- Closed
-