MDEV-35152 - DATA/INDEX DIRECTORY options are ignored for vector index

Let high-level indexes honor DATA/INDEX DIRECTORY table options:
now they store high-level index data files in DATA DIRECTORT and
index files in INDEX DIRECTORY.