sql/handler.cc
@@ -6449,12 +6449,28 @@ int ha_create_table(THD *thd, const char *path, const char *db,
     DBUG_ASSERT(share.key_info[share.keys].algorithm == HA_KEY_ALG_VECTOR);
     TABLE_SHARE index_share;
     char file_name[FN_REFLEN+1];
+    char hlindex_data_file_name[FN_REFLEN+1];
+    char hlindex_index_file_name[FN_REFLEN+1];
     Alter_info index_ainfo;
     HA_CREATE_INFO index_cinfo;
     char *path_end= strmov(file_name, path);
+    char *hlindex_data_file_name_end;
+    char *hlindex_index_file_name_end;
 
     bzero((char*) &index_cinfo, sizeof(index_cinfo));
     index_cinfo.alter_info= &index_ainfo;
+    if (create_info->data_file_name)
+    {
+      hlindex_data_file_name_end=
+        strmov(hlindex_data_file_name, create_info->data_file_name);
+      index_cinfo.data_file_name= hlindex_data_file_name;
+    }
+    if (create_info->index_file_name)
+    {
+      hlindex_index_file_name_end=
+        strmov(hlindex_index_file_name, create_info->index_file_name);
+      index_cinfo.index_file_name= hlindex_index_file_name;
+    }
 
     if ((error= share.path.length > sizeof(file_name) - HLINDEX_BUF_LEN))
       goto err;
@@ -6462,6 +6478,16 @@ int ha_create_table(THD *thd, const char *path, const char *db,
     for (uint i= share.keys; i < share.total_keys; i++)
     {
       my_snprintf(path_end, HLINDEX_BUF_LEN, HLINDEX_TEMPLATE, i);
+      if (create_info->data_file_name)
+      {
+        my_snprintf(hlindex_data_file_name_end, HLINDEX_BUF_LEN,
+                    HLINDEX_TEMPLATE, i);
+      }
+      if (create_info->index_file_name)
+      {
+        my_snprintf(hlindex_index_file_name_end, HLINDEX_BUF_LEN,
+                    HLINDEX_TEMPLATE, i);
+      }
       init_tmp_table_share(thd, &index_share, db, 0, table_name, file_name, 1);
       index_share.db_plugin= share.db_plugin;
       LEX_CSTRING sql= mhnsw_hlindex_table_def(thd, ref_length);
